--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@sap/cds": "^8",
-    "express": "^4"
+    "@sap/cds": "^8.2.0",
+    "express": "^4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^8.2.0",
     "@cap-js/cds-types": "^0.6",
+    "@cap-js/sqlite": "^1",
     "sqlite3": "^5.1.4"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "watch:ts": "cds-ts watch"
   },
   "cds": {
     "requires": {
