--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@sap/cds-dk": "^8.2.0",
     "@cap-js/cds-types": "^0.6",
+    "@cap-js/cds-typer": "^0.25.0",
     "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^8.2.0",
     "sqlite3": "^5.1.4"
   },
   "scripts": {
@@ -27,5 +28,8 @@
         "kind": "sqlite"
       }
     }
+  },
+  "imports": {
+    "#cds-models/*": "./@cds-models/*/index.js"
   }
 }
