--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,22 @@
         "target": "es6",
         "module": "commonjs",
         "outDir": "./gen/srv/srv",
-        "rootDir": "./srv",
+        "rootDir": "./",
         "baseUrl": "./",
         "moduleResolution": "node",
         "skipLibCheck": true,
         "preserveConstEnums": true,
         "sourceMap": false,
         "allowJs": true,
-        "strict": false,
+        "strict": true,
         "strictNullChecks": false,
         "strictPropertyInitialization": false,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "paths": {
+            "#cds-models/*": [
+                "./@cds-models/*/index.ts"
+            ]
+        }
     },
     "include": [
         "./srv/**/*"
